// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders Radio correctly 1`] = `
<styled.div
  className="myClass"
  id="radio1"
  style={
    Object {
      "color": "blue",
    }
  }
>
  <styled.div
    disabled={true}
    onClick={[Function]}
  >
    <styled.div
      selected={true}
    >
      radio_button_checked
    </styled.div>
    <Label
      className=""
      disabled={true}
      primaryColor="#2d2d2d"
      style={
        Object {
          "minWidth": "unset",
        }
      }
      width={150}
    >
      This is radio 1
    </Label>
  </styled.div>
</styled.div>
`;

exports[`Radio renders RadioGroup correctly 1`] = `
<Radio
  className="myClass"
  dataLabel="plan"
  id="radio1"
  onChange={[MockFunction]}
  selectedRadios={
    Array [
      Object {
        "label": "Radio1",
        "selected": true,
        "value": "Radio1",
      },
      Object {
        "label": "Radio2",
        "selected": false,
        "value": "Radio2",
      },
      Object {
        "label": "Radio3",
        "selected": false,
        "value": "Radio3",
      },
    ]
  }
  spacing={10}
  style={
    Object {
      "color": "blue",
    }
  }
  title="Select a plan"
  vertical={true}
>
  <styled.div
    className="myClass"
    id="radio1"
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <div
      className="sc-dlnjPT duxSQX myClass"
      id="radio1"
      style={
        Object {
          "color": "blue",
        }
      }
    >
      <styled.div
        onClick={[Function]}
      >
        <div
          className="sc-hKFyIo bmgVpe"
          onClick={[Function]}
        >
          <styled.div>
            <div
              className="sc-eCApGN jEwlHW"
            >
              radio_button_unchecked
            </div>
          </styled.div>
          <Label
            className=""
            primaryColor="#2d2d2d"
            style={
              Object {
                "minWidth": "unset",
              }
            }
            width={150}
          >
            <styled.div
              className=""
              onClick={[Function]}
              primaryColor="#2d2d2d"
              style={
                Object {
                  "minWidth": "unset",
                }
              }
              width={150}
            >
              <div
                className="sc-gtssRu HIKRA"
                onClick={[Function]}
                style={
                  Object {
                    "minWidth": "unset",
                  }
                }
                width={150}
              />
            </styled.div>
          </Label>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Radio>
`;
